// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutPage renders 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header
      class="mb-2 shadow shadow-md"
    >
      <div
        class="main-container main-container--content pr-0"
      >
        <a
          class="px-4 lg:px-0 font-2xl font-serif self-center text-left focus:outline-none focus:ring-2 focus:ring-red-600"
          href="/"
        >
          Test App
        </a>
      </div>
      <div
        class="bg-gray-100 dark:bg-gray-900"
      >
        <div
          class="main-container main-container--content flex flex-row px-0"
        >
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600 lg:hidden"
            data-testid="page-header-left-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <div
            class="flex-1 text-lg font-semibold font-serif leading-10"
          >
            aboutPageTitle
          </div>
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
            data-testid="page-header-right-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <div
      class="main-container"
    >
      <div
        class="layout__sidebar layout__sidebar--left  layout__sidebar--content"
        data-testid="layout-sub-menu"
      >
        <button
          class="button button--close layout__close-button layout__close-button--left layout__close-button--content text-right"
          data-testid="sub-menu-nav-close-button"
          type="button"
        >
          <svg
            class="icon"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           close
        </button>
        <nav
          class="pages-nav pages-nav--sub-menu"
        >
          <ul
            class="nav-pages__list nav-pages__list--sub-menu"
          >
            <li>
              <a
                class="pages-nav__link"
                href="/characters"
              >
                charactersPageTitle
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/rules"
              >
                rulesPageTitle
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/faq"
              >
                faqShort
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/about"
              >
                aboutPageTitle
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="layout__main  layout__main--content"
      >
        <main
          class="flex-1"
        >
          <div
            class="content leading-normal max-w-prose mx-auto"
            style="hyphens: auto;"
          >
            <h1
              id="test"
            >
              test
            </h1>
          </div>
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              aboutPageTitle
            </a>
            <a
              class="link"
              href="/faq"
            >
              faqShort
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 darkModeTurnOn
              </span>
            </button>
          </div>
        </footer>
      </div>
      <div
        class="layout__sidebar layout__sidebar--right-fake  layout__sidebar--content"
      />
      <div
        class="layout__sidebar layout__sidebar--right  layout__sidebar--content"
      >
        <div>
          <button
            class="button button--close layout__close-button layout__close-button--right layout__close-button--content text-left"
            data-testid="session-close-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             close
          </button>
          <div
            class="px-2 xl:px-0"
          >
            <div
              data-testid="loading"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AboutPage shows a warning on non-english pages 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header
      class="mb-2 shadow shadow-md"
    >
      <div
        class="main-container main-container--content pr-0"
      >
        <a
          class="px-4 lg:px-0 font-2xl font-serif self-center text-left focus:outline-none focus:ring-2 focus:ring-red-600"
          href="/"
        >
          Test App
        </a>
      </div>
      <div
        class="bg-gray-100 dark:bg-gray-900"
      >
        <div
          class="main-container main-container--content flex flex-row px-0"
        >
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600 lg:hidden"
            data-testid="page-header-left-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <div
            class="flex-1 text-lg font-semibold font-serif leading-10"
          >
            aboutPageTitle
          </div>
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
            data-testid="page-header-right-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <div
      class="main-container"
    >
      <div
        class="layout__sidebar layout__sidebar--left  layout__sidebar--content"
        data-testid="layout-sub-menu"
      >
        <button
          class="button button--close layout__close-button layout__close-button--left layout__close-button--content text-right"
          data-testid="sub-menu-nav-close-button"
          type="button"
        >
          <svg
            class="icon"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           close
        </button>
        <nav
          class="pages-nav pages-nav--sub-menu"
        >
          <ul
            class="nav-pages__list nav-pages__list--sub-menu"
          >
            <li>
              <a
                class="pages-nav__link"
                href="/characters"
              >
                charactersPageTitle
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/rules"
              >
                rulesPageTitle
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/faq"
              >
                faqShort
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                href="/about"
              >
                aboutPageTitle
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="layout__main  layout__main--content"
      >
        <main
          class="flex-1"
        >
          <div
            class="bg-yellow-200 text-yellow-900 border-yellow-400 border px-2 py-1 rounded-sm mb-2"
            data-testid="about-page-language-warning"
          >
            onlyAvailableInEnglish
          </div>
          <div
            class="content leading-normal max-w-prose mx-auto"
            style="hyphens: auto;"
          >
            <h1
              id="test"
            >
              test
            </h1>
          </div>
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              aboutPageTitle
            </a>
            <a
              class="link"
              href="/faq"
            >
              faqShort
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 darkModeTurnOn
              </span>
            </button>
            <a
              class="button"
              data-testid="locale-selector-language"
              href="/?locale=%F0%9F%87%B3%F0%9F%87%B4"
            >
              🇺🇸 translateTo
            </a>
          </div>
        </footer>
      </div>
      <div
        class="layout__sidebar layout__sidebar--right-fake  layout__sidebar--content"
      />
      <div
        class="layout__sidebar layout__sidebar--right  layout__sidebar--content"
      >
        <div>
          <button
            class="button button--close layout__close-button layout__close-button--right layout__close-button--content text-left"
            data-testid="session-close-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             close
          </button>
          <div
            class="px-2 xl:px-0"
          >
            <div
              data-testid="loading"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
